overflow bugs

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,8 +9,8 @@ body {
   );
   transition: color 0.5s, background-color 0.5s;
   line-height: 1.6;
-  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Chalkduster,
-    Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
+  font-family: Inter, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans",
     "Rubik Maze" "Helvetica Neue", sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
@@ -19,11 +19,15 @@ body {
 }
 
 @font-face {
-  font-family: Chalkduster;
-  src: url("../assets/Chalkduster.ttf");
+  font-family: Podkova;
+  src: url("../assets/Podkova-ExtraBold.ttf");
 }
 
 .parallelFont {
-    font-family: Chalkduster;
+  font-family: var(--font);
   font-size: larger;
+}
+
+:root {
+  --font: Podkova;
 }
